CFVPC_Subnet_EC2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Create VPC,Subnet and EC2Instance

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: EC2 KeyPair for SSH access
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
    Description: Select t2.micro or t3.micro. Default is t2.micro
  Envtype:
    Type: String
    Default: test
    AllowedValues:
      - prod
      - test
    Description: Environment Type

Resources: 
  # VPCの定義
  RaiseTechCFtestVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub RaiseTechCFtestVPC-${Envtype}

  # サブネットの定義
  CFPublicSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1a
      VpcId: !Ref RaiseTechCFtestVPC
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Name
          Value: !Sub CFPublicSubnet1a-${Envtype}
  CFPublicSubnet1d:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1d
      VpcId: !Ref RaiseTechCFtestVPC
      CidrBlock: 10.0.2.0/24
      Tags:
        - Key: Name
          Value: !Sub CFPublicSubnet1d-${Envtype}
  CFPrivateSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1a
      VpcId: !Ref RaiseTechCFtestVPC
      CidrBlock: 10.0.1.0/24
      Tags:
        - Key: Name
          Value: !Sub CFPrivateSubnet1a-${Envtype}
  CFPrivateSubnet1d:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1d
      VpcId: !Ref RaiseTechCFtestVPC
      CidrBlock: 10.0.3.0/24
      Tags:
        - Key: Name
          Value: !Sub CFPrivateSubnet1d-${Envtype}

  # インターネットゲートウェイの定義        
  Igw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub RaiseTehcCFtestigw-${Envtype}
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref RaiseTechCFtestVPC
      InternetGatewayId: !Ref Igw

  # ルートテーブルの定義    
  CFRoutetable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref RaiseTechCFtestVPC
      Tags:
        - Key: Name
          Value: !Sub CFRoutetable-${Envtype}

  # インターネットゲートウェイとルートテーブルの関連付け        
  CFRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref CFRoutetable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref Igw

  # サブネットとルートテーブルの関連付け    
  CFRoutetableAssociation1a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref CFPublicSubnet1a
      RouteTableId: !Ref CFRoutetable
  CFRoutetableAssociation1d:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref CFPublicSubnet1d
      RouteTableId: !Ref CFRoutetable

  # セキュリティグループの定義
  CFSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: This security Group is for CFtest
      VpcId: !Ref RaiseTechCFtestVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: For HTTP
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
          Description: For SSH
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
          Description: For rails  
      Tags:
        - Key: Name
          Value: !Sub CFSecurityGroup-${Envtype}

  # EC2インスタンスの定義
  CFEC2Instance:
    Type: AWS::EC2::Instance
    Properties: 
      SubnetId: !Ref CFPublicSubnet1a
      AvailabilityZone: ap-northeast-1a
      KeyName: !Ref KeyName
      ImageId: ami-06098fd00463352b6
      InstanceType: 
        Ref: InstanceTypeParameter
      Monitoring: false
      SecurityGroupIds:
        - !Ref CFSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub CFEC2Instance-${Envtype}
